# conformance

./: .bazelrc  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  BUILD.bazel  Dockerfile.base  Dockerfile.cc  Dockerfile.client  Dockerfile.clientconnect  Dockerfile.clientgrpc  Dockerfile.conformancego  Dockerfile.conformanceweb  Dockerfile.crosstest  Dockerfile.crosstestgo  Dockerfile.crosstestweb  Dockerfile.serverconnect  Dockerfile.servergrpc  MAINTAINERS.md  Makefile  README.md  RELEASE.md  WORKSPACE.bazel  buf.gen.yaml  buf.work.yaml  buf.yaml  connect_server_test.go  docker-compose.yaml  envoy.yaml  foobar  go.mod  go.sum  grpc_server_test.go  grpcweb_client_test.js  package-lock.json  package.json  testsuites
.github/: CONTRIBUTING.md  conformance-issue-template.md  crosstest-issue-template.md  dependabot.yml
.github/workflows/: buf-ci.yaml  buf.yaml  ci.yaml  conformance-cc.yaml  conformance-go.yaml  conformance-web.yaml  crosstest-cc.yaml  crosstest-go.yaml  crosstest-web.yaml  crosstest.yaml  release.yaml
_legacy/: bazel-bin  bazel-connect-conformance  bazel-out  bazel-testlogs  go.mod.backup
_legacy/web/: karma.conf.js  package-lock.json
cc/: BUILD.bazel  grpc_client_test.cc
cc/grpc/: BUILD.bazel  client.cc
cert/: BUILD.bazel  ConformanceCA.crt  ConformanceCA.key  CrosstestCA.crt  ExampleCA.crl  ExampleCA.crt  ExampleCA.key  client.crt  client.csr  client.key  envoy.crt  envoy.csr  envoy.key  localhost.crt  localhost.csr  localhost.key  server-connect.crt  server-connect.csr  server-connect.key  server-grpc.crt  server-grpc.csr  server-grpc.key
cmd/client/: main.go  mainbak.go
cmd/clientconnect/: main.go
cmd/clientgrpc/: main.go
cmd/connectconformance/: main.go  main_test.go
cmd/createcert/: main.go
cmd/grpcclient/: main.go
cmd/grpcserver/: main.go
cmd/grpcwebclient/: app.ts  main.go  package-lock.json  package.json
cmd/referenceclient/: main.go
cmd/referenceserver/: main.go
cmd/server/: main.go
docs/: authoring_test_cases.md  configuring_and_running_tests.md  testing_clients.md  testing_servers.md
grpcwebclient/: README.md  browser.ts  browserscript.ts  buf.gen.yaml  conformance-runner.ts  converter.ts  entry.ts  grpcwebclient.ts  impl.ts  invoke.ts  known_failing.txt  package-lock.json  package.json  pipe.ts  runner.ts  status_pb.d.ts  tsconfig.json  wdio.conf.ts
internal/: cancellation.go  codec.go  codec_test.go  config.go  delimited.go  delimited_test.go  errors.go  headers.go  printer.go  raw_http_body.go  raw_http_body_test.go  tls.go  version.go
legacy/: Dockerfile.conformancecc  docker-compose.yaml
proto/: buf.md  buf.yaml
proto/connect/conformance/: BUILD.bazel  messages.proto  test.proto
proto/connectrpc/conformance/: BUILD.bazel  messages.proto  test.proto
proto/connectrpc/conformance/v1/: BUILD.bazel  client_compat.proto  config.proto  messages.proto  server_compat.proto  service.proto  suite.proto  test.proto
proto/connectrpc/conformance/v1alpha1/: client_compat.proto  config.proto  server_compat.proto  service.proto  suite.proto
proto/connectrpc/conformance/v2/: client_compat.proto  config.proto  server_compat.proto  service.proto  suite.proto
testdata/: connecth2  grpc-impls-config.yaml  grpc-web-client-impl-config.yaml  grpc-web-server-impl-config.yaml  reference-impls-config.yaml
testing/: grpcclient-known-failing.txt  grpcserver-web-known-failing.txt  grpcwebclient-known-failing.txt  reference-impls-config.yaml  referenceclient-known-failing.txt  referenceserver-known-failing.txt
v1/: .gitignore  buf.gen.yaml
web/: .eslintrc.cjs  .eslintrc.js  README.md  karma.conf.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+296 files in other folders)
