# Copyright 2022 Buf Technologies, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//cc:__subpackages__"])

cc_test(
    name = "grpc_client_test",
    srcs = ["grpc_client_test.cc"],
    deps = [
        "//cc:gen-connectrpc-conformance",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_googleapis//google/rpc:status_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
    data = ["//cert:client_certs"],
)

cc_library(
    name = "gen-connectrpc-conformance",
    srcs = glob(["gen/connectrpc/conformance/**/*.cc"]),
    hdrs = glob(["gen/connectrpc/conformance/**/*.h"]),
    includes = ["gen"],
    deps = [
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf",
    ],
)
